kubernetes/grafana/update-grafana-for-ntfy-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  template:
    spec:
      volumes:
        - name: grafana-dashboard-loader
          configMap:
            name: grafana-dashboard-loader
        - name: ntfy-dashboard
          configMap:
            name: ntfy-dashboard
      containers:
        - name: grafana
          volumeMounts:
            - name: grafana-dashboard-loader
              mountPath: /etc/grafana/provisioning/dashboards
            - name: ntfy-dashboard
              mountPath: /var/lib/grafana/dashboards/ntfy
